WID-943-New - Manual Master rebased onto WID-943.

--- a/license_generator_form/templates/base.html
+++ b/license_generator_form/templates/base.html
@@ -9,7 +9,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="{% static "bootstrap/css/bootstrap.min.css" %}" rel="stylesheet" type="text/css">
         <link href="{% static "css/base.css" %}" rel="stylesheet" type="text/css">  
-        <link href="{% static "css/datepicker.css" %}" rel="stylesheet" type="text/css">                                      
+        <link href="{% static "css/datepicker.css" %}" rel="stylesheet" type="text/css">
+        <link href="{% static "css/license_check.css" %}" rel="stylesheet" type="text/css">                                     
         <link href="{% static "awesome-bootstrap-checkbox-master/bower_components/Font-Awesome/css/font-awesome.css" %}" rel="stylesheet" type="text/css">    
         <link href="{% static "awesome-bootstrap-checkbox-master/awesome-bootstrap-checkbox.css" %}" rel="stylesheet" type="text/css">        
     </head>
