--- a/license_generator_form/templates/navbar.html
+++ b/license_generator_form/templates/navbar.html
@@ -14,13 +14,13 @@
                 <a class="navbar-brand" href="#" data-original-title="top home"><img src="{% static "images/alfresco-logo.png" %}">
                 <span id="interactive-title">Alfresco License Generator</span></a>
             </div>
-            <div class="navbar-collapse collapse" id="myNavbar">
+            <div class="navbar-collapse collapse" id="LicenseNavbar">
                 <ul class="nav navbar-nav">
                     <li>
                         <a target="_blank" href="https://issues.alfresco.com/jira/secure/CreateIssue.jspa?pid=10130&issuetype=1" data-original-title="raise jira ticket">Raise a JIRA ticket for this app</a>
                     </li>
                     <li>
-                        <a href="#" data-original-title="upload and check license">Upload and check an existing license</a>
+                        <a data-toggle="modal" href="#licenseCheck" data-original-title="upload and check license">Upload and check an existing license</a>
                     </li> 
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
