--- a/license_generator_form/templates/license_check.html
+++ b/license_generator_form/templates/license_check.html
@@ -12,7 +12,7 @@
                         {% csrf_token %}  
                         
                         <div class="input-group" id="radioalternative">
-                            <p><b>What type of licenses are you uploading?</b></p>
+                            <p><b>What type of license are you uploading?</b></p>
                             <label class="radio-inline"><input type="radio" name="optlicense" checked="checked" value="Alfresco">Alfresco License</label>
                             <label class="radio-inline"><input type="radio" name="optlicense" value="Activiti">Activiti License</label>
                         </div>  
