--- a/license_generator_form/templates/home.html
+++ b/license_generator_form/templates/home.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
 
 {% block body %}
     {% include "navbar.html" %}
@@ -37,6 +38,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>    
     <script src="http://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.js"></script>
+    <script src="{% static "js/generate_filename.js" %}"></script>
     <script type="text/javascript">   
         /* Allows to change the title of the nav bar*/               
         $("#tabSwitcher li a").click(function() {
