--- a/license_generator_form/templates/base.html
+++ b/license_generator_form/templates/base.html
@@ -10,7 +10,8 @@
         <link href="{% static "bootstrap/css/bootstrap.min.css" %}" rel="stylesheet" type="text/css">
         <link href="{% static "css/base.css" %}" rel="stylesheet" type="text/css">  
         <link href="{% static "css/datepicker.css" %}" rel="stylesheet" type="text/css">
-        <link href="{% static "css/license_check.css" %}" rel="stylesheet" type="text/css">                                     
+        <link href="{% static "css/license_check.css" %}" rel="stylesheet" type="text/css">
+        <link href="{% static "css/auth_form.css" %}" rel="stylesheet" type="text/css">            
         <link href="{% static "awesome-bootstrap-checkbox-master/bower_components/Font-Awesome/css/font-awesome.css" %}" rel="stylesheet" type="text/css">    
         <link href="{% static "awesome-bootstrap-checkbox-master/awesome-bootstrap-checkbox.css" %}" rel="stylesheet" type="text/css">        
     </head>
