WID-875 - Added logout functionality: url, view and link to template.

--- a/license_generator_form/templates/navbar.html
+++ b/license_generator_form/templates/navbar.html
@@ -24,7 +24,9 @@
                     </li> 
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#" data-original-title="log out"><span class="glyphicon glyphicon-log-out"></span> Log out {{username}}</a></li>
+                    <li>
+                        <a href="/logout/" data-original-title="log out"><span class="glyphicon glyphicon-log-out"></span> Log out {{username}}</a>
+                    </li>
                 </ul>                        
             </div>
         </div>
