WID-875 - Added trademark png, modify the some bit in the logout to make it work fine

--- a/license_generator_form/templates/navbar.html
+++ b/license_generator_form/templates/navbar.html
@@ -25,7 +25,10 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="/logout/" data-original-title="log out"><span class="glyphicon glyphicon-log-out"></span> Log out {{username}}</a>
+                        <a href="/logout/" data-original-title="log out">
+                            <span class="glyphicon glyphicon-log-out"></span> 
+                            Log out {{ user }}
+                        </a>
                     </li>
                 </ul>                        
             </div>
