WID-875 - Added initial functional tests + some unit tests

--- a/license_generator_form/templates/auth_form.html
+++ b/license_generator_form/templates/auth_form.html
@@ -11,7 +11,7 @@
 
                 {% if auth_error %}
                     <div class="form-group">
-                        <p class="text-danger text-justify bg-danger">
+                        <p class="text-danger text-justify bg-danger" id="auth_error">
                             <strong>
                                 Your authentication details have not been recognized or Alfresco may not be available at this time.
                             </strong>
