--- a/license_generator_form/templates/navbar.html
+++ b/license_generator_form/templates/navbar.html
@@ -27,7 +27,7 @@
                     <li>
                         <a href="/logout/" data-original-title="log out">
                             <span class="glyphicon glyphicon-log-out"></span> 
-                            Log out {{ user }}
+                            {% if user.is_anonymous %}Log out {% else %}Log out {{ user }}{% endif %}                          
                         </a>
                     </li>
                 </ul>                        
