--- a/license_generator_form/templates/alfresco_form.html
+++ b/license_generator_form/templates/alfresco_form.html
@@ -54,27 +54,27 @@
             <hr>
             <fieldset  id="tag_license_types" name="tag_license_types">
                 <div class="radio radio-success">
-                    <input id="tag_trial" name="tag_trial" value="1" type="radio">
+                    <input id="tag_trial" name="license_types" value="1" type="radio">
                     <label for="tag_trial">Trial</label>
                 </div>
 
                 <div class="radio radio-success">
-                    <input id="tag_internal_use_only" name="tag_internal_use_only" value="1" type="radio">
+                    <input id="tag_internal_use_only" name="license_types" value="1" type="radio">
                     <label for="tag_internal_use_only">Internal use only</label>
                 </div>
 
                 <div class="radio radio-success">
-                    <input id="tag_proof_of_concept" name="tag_proof_of_concept" value="1" type="radio">
+                    <input id="tag_proof_of_concept" name="license_types" value="1" type="radio">
                     <label for="tag_proof_of_concept">Proof of concept</label>
                 </div>
 
                 <div class="radio radio-success">
-                    <input id="tag_extension" name="tag_extension" value="1" type="radio">
+                    <input id="tag_extension" name="license_types" value="1" type="radio">
                     <label for="tag_extension">Extension</label>
                 </div>
 
                 <div class="radio radio-success">
-                    <input id="tag_perpetual" name="tag_perpetual" value="1" type="radio">
+                    <input id="tag_perpetual" name="license_types" value="1" type="radio">
                     <label for="tag_perpetual">Perpetual</label>
                 </div>
             </fieldset>    
