WID-875 - Added some loggin modifications + logo names changed

--- a/license_generator_form/templates/404.html
+++ b/license_generator_form/templates/404.html
@@ -4,7 +4,7 @@
 {% block body %}
     <div class="container-fluid" id="error-window">
         <div>
-            <img alt="Alfresco Logo" src="{% static "images/Alfresco_logo404.png" %}" id="logo">       
+            <img alt="Alfresco Logo" src="{% static "images/Alfresco_logo.png" %}" id="logo">       
             <div class="error-details" class="text-danger">Sorry, an error has occured, Requested page not found!</div>
             <a class="btn btn-large btn-primary" href="/"><span class="glyphicon glyphicon-home"></span> Home</a>
             <div class="row" id="copy-right">© 2005-2015 Alfresco Software Inc. All rights reserved.</div>
