--- a/license_generator_form/templates/navbar.html
+++ b/license_generator_form/templates/navbar.html
@@ -11,7 +11,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>                                             
-                <a class="navbar-brand" href="#" data-original-title="top home"><img src="{% static "images/alfresco-logo.png" %}">
+                <a class="navbar-brand" href="#" data-original-title="top home"><img src="{% static "images/alfresco_logo_navbar.png" %}">
                 <span id="interactive-title">Alfresco License Generator</span></a>
             </div>
             <div class="navbar-collapse collapse" id="LicenseNavbar">
