--- a/license_generator_form/templates/auth_form.html
+++ b/license_generator_form/templates/auth_form.html
@@ -6,7 +6,7 @@
         <div class="row">
             <div class="col-md-12 col-xs-12">
                 <div class="form-group">
-                    <img alt="Alfresco Logo" src="{% static "images/alfresco_logo404.png" %}" id="logo">
+                    <img alt="Alfresco Logo" src="{% static "images/alfresco_logo.png" %}" id="logo">
                 </div>
 
                 {% if auth_error %}
