added License model, working on integrating into view

--- a/app/license_generator_form/templates/alfresco_form.html
+++ b/app/license_generator_form/templates/alfresco_form.html
@@ -129,7 +129,7 @@
                 <!-- From now on we will have the other 6 field inputs left   -->
                 <div class="col-md-6 col-xs-12">
                     <div class="input-group" id="format-license-type">
-                        <span class="input-group-addon" id="sizing-addon2">License type</span>
+                        <span class="input-group-addon" id="sizing-addon2">License group</span>
                         
                         <select class="form-control" id="field_license_type" name="field_license_type" aria-describedby="sizing-addon2">
                             <option value="ENTERPRISE" selected="selected" >ENTERPRISE</option>
